--- a/styles.css
+++ b/styles.css
@@ -78,19 +78,62 @@ ul {
 li {
     background-color: #f1f1f1;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 15px;
     border-radius: 4px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     transition: background-color 0.3s ease;
+    display: flex;
+    flex-direction: column;
 }
 
 body.dark-mode li {
     background-color: #555;
 }
 
-li button {
+/* Avatar e Nome do Usuário */
+.question-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.user-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.user-name {
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+/* Botões de Editar e Remover */
+.question-buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+}
+
+.question-buttons button {
+    margin-left: 10px;
+}
+
+.edit-button {
+    background-color: #007bff; /* Cor azul */
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.edit-button:hover {
+    background-color: #0056b3;
+}
+
+.remove-button {
     background-color: #dc3545;
     color: white;
     border: none;
@@ -100,8 +143,31 @@ li button {
     transition: background-color 0.3s ease;
 }
 
-li button:hover {
+.remove-button:hover {
     background-color: #c82333;
+}
+
+/* Seção de Comentários */
+.comments-section {
+    margin-top: 15px;
+    padding: 10px;
+    background-color: #e9e9e9;
+    border-radius: 4px;
+}
+
+.comment-button {
+    padding: 10px 20px;
+    border: none;
+    background-color: #ff7f00; /* Cor laranja */
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 10px;
+}
+
+.comment-button:hover {
+    background-color: #e67300; /* Cor laranja mais escura */
 }
 
 .theme-switcher {
@@ -145,19 +211,4 @@ li button:hover {
 
 #theme-toggle:checked::before {
     transform: translateX(20px);
-}
-
-/* Adicionando estilo para o botão "Editar" */
-.edit-button {
-    background-color: #007bff; /* Cor azul */
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.edit-button:hover {
-    background-color: #0056b3;
 }
