--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-image: url('assets/biblebg.jpeg');
+    background-size: contain;
+    background-position: auto;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -21,14 +24,15 @@ body.dark-mode {
     max-width: 600px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
+    backdrop-filter: blur(10px);
 }
 
 body.dark-mode .container {
-    background-color: #444;
+    background-color: rgba(68, 68, 68, 0.8);
 }
 
 h1 {
@@ -101,11 +105,13 @@ body.dark-mode li {
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
+    object-fit: cover;
 }
 
 .user-name {
     font-weight: bold;
     margin-right: 5px;
+    line-height: 40px; /* Igual à altura do avatar para centralização vertical */
 }
 
 /* Botões de Editar e Remover */
